--- a/client/index.html
+++ b/client/index.html
@@ -4,26 +4,20 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <nav class="nav">
-        <p class="title">Cool Kreations</p>
-    </nav>
-    <section id="itemArea">
-        <!-- <section class="item">
-            <img class="image"
-                src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80"
-                alt="picture of the image">
-            <p>White T-shirt</p>
-            <p>$5.99</p>
-            <p>10 left</p>
-        </section> -->
-    </section>
+    <div class="container">
+        <nav class="nav">
+            <p class="title">Cool Kreations</p>
+        </nav>
+        <section id="output">
+        </section>
+    </div>
 </body>
 
 
