--- a/client/inventory.html
+++ b/client/inventory.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <h1>Image Link</h1>
-                <input type="file" id="image" name="productImage" class="form-control" placeholder="Image Link">
+                <input type="file" id="image" name="productPicture" class="form-control" placeholder="Image Link">
             </div>
             <div class="form-group">
                 <h1>Item Name</h1>
@@ -36,9 +36,5 @@
         </form>
     </div>
 </body>
-
-
-
-<script src="js/inventory.js" type="text/javascript"></script>
 
 </html>
